--- a/app.css
+++ b/app.css
@@ -1,10 +1,14 @@
 body {
-    text-align: center;
     font-family: 'Roboto', sans-serif;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 button {
     margin-bottom: 1em;
+    margin-left: 0.5em;
+    margin-right: 0.5em;
     background: none;
     border: 2px solid;
     padding: 1em 2em;
@@ -28,23 +32,67 @@ button:disabled {
     cursor: not-allowed;
 }
 
-.container {
-    width: 50%;
-    height: 450px;
-    margin: 0 auto;
+h1, h2 {
+    flex-basis: 100%;
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+main {
+    display: flex;
+    flex-wrap: wrap;
+    flex-basis: 100%;
+    justify-content: center;
+    height: 70vh;
+}
+
+section {
+    flex-basis: 100%;
+    flex-wrap: wrap;
+}
+
+ul {
+    padding-left: 0;
+    list-style-type: circle;
+}
+
+.row {
+    display: flex;
+    justify-content: center;
 }
 
 #left {
-    width: 40%;
-    text-align: left;
-    float: left;
+    display: flex;
+    flex: 1;
 }
 
 #right {
-    width: 49%;
-    float: left;
+    display: flex;
+    flex: 1;
 }
 
 #picked-color {
-    font-size: larger;
+    font-size: 3rem;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+}
+
+@media (max-width: 768px) {
+    ul {
+        padding-left: 1rem;
+    }
+}
+
+@media (max-width: 576px) {
+    h1 {
+        font-size: 1.5em;
+    }
+    h2 {
+        font-size: 1.2em;
+    }
+    #picked-color {
+        font-size: 2rem;
+    }
 }
