--- a/app.css
+++ b/app.css
@@ -65,3 +65,15 @@ ul {
 #picked-color {
     font-size: 2rem;
 }
+
+@media (min-width: 768px) {
+    li {
+        font-size: 1rem;
+    }
+    canvas, #colors-left {
+        height: 60vh;
+    }
+    h1 {
+        margin-bottom: 2rem;
+    }
+}
