--- a/app.css
+++ b/app.css
@@ -71,9 +71,15 @@ ul {
         font-size: 1rem;
     }
     canvas, #colors-left {
-        height: 60vh;
+        height: 55vh;
     }
     h1 {
         margin-bottom: 2rem;
+    }
+}
+
+@media (min-width: 992px) {
+    canvas, #colors-left {
+        height: 60vh;
     }
 }
